--- a/Esercizio 1/conceptual_similarity.ipynb
+++ b/Esercizio 1/conceptual_similarity.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "[353 rows x 3 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 156,
    "metadata": {
     "collapsed": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 157,
    "metadata": {
     "collapsed": false
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -2249,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2292,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2335,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2359,7 +2359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2383,7 +2383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2405,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 165,
    "metadata": {
     "collapsed": false
    },
@@ -68407,12 +68407,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_similarity(metric='wup_similarity'):\n",
     "    corpus_copy = corpus.copy()\n",
+    "    corpus_copy_nltk = corpus.copy()\n",
     "\n",
     "    for row in corpus.iterrows():\n",
     "        token1 = row[1]['Word 1']\n",
@@ -68448,14 +68449,17 @@
     "        #print('\\n')\n",
     "\n",
     "        corpus_copy.loc[row[0], metric] = best_similarity\n",
+    "        corpus_copy_nltk.loc[row[0], metric] = best_nltk_similarity\n",
+    "\n",
     "\n",
     "    corpus_copy.to_csv('datasets/WordSim353_' + metric + '.csv', sep=',', index=False)\n",
+    "    corpus_copy_nltk.to_csv('datasets/WordSim353_' + metric + '_nltk.csv', sep=',', index=False)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68464,7 +68468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68473,7 +68477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 169,
    "metadata": {
     "collapsed": false
    },
@@ -68500,17 +68504,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pearson_correlation(metric='wup_similarity'):\n",
+    "def pearson_correlation(metric='wup_similarity', nltk=False):\n",
     "    if (metric == 'wup_similarity'):\n",
-    "        corpus = pd.read_csv('datasets/WordSim353_wup_similarity.csv', sep=',', engine='python')\n",
+    "        if nltk:\n",
+    "            corpus = pd.read_csv('datasets/WordSim353_wup_similarity_nltk.csv', sep=',', engine='python')\n",
+    "        else:\n",
+    "            corpus = pd.read_csv('datasets/WordSim353_wup_similarity.csv', sep=',', engine='python')\n",
     "    elif (metric == 'sp_similarity'):\n",
-    "        corpus = pd.read_csv('datasets/WordSim353_sp_similarity.csv', sep=',', engine='python')\n",
+    "        if nltk:\n",
+    "            corpus = pd.read_csv('datasets/WordSim353_sp_similarity_nltk.csv', sep=',', engine='python')\n",
+    "        else:\n",
+    "            corpus = pd.read_csv('datasets/WordSim353_sp_similarity.csv', sep=',', engine='python')\n",
     "    elif (metric == 'lch_similarity'):\n",
-    "        corpus = pd.read_csv('datasets/WordSim353_lch_similarity.csv', sep=',', engine='python')\n",
+    "        if nltk:\n",
+    "            corpus = pd.read_csv('datasets/WordSim353_lch_similarity_nltk.csv', sep=',', engine='python')\n",
+    "        else:\n",
+    "            corpus = pd.read_csv('datasets/WordSim353_lch_similarity.csv', sep=',', engine='python')\n",
     "\n",
     "    actual = corpus['Human (mean)']\n",
     "    predicted = corpus[metric]\n",
@@ -68529,17 +68542,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def spearman_correlation(metric='wup_similarity'):\n",
+    "def spearman_correlation(metric='wup_similarity', nltk=False):\n",
     "    if (metric == 'wup_similarity'):\n",
-    "        corpus = pd.read_csv('datasets/WordSim353_wup_similarity.csv', sep=',', engine='python')\n",
+    "        if nltk:\n",
+    "            corpus = pd.read_csv('datasets/WordSim353_wup_similarity_nltk.csv', sep=',', engine='python')\n",
+    "        else:\n",
+    "            corpus = pd.read_csv('datasets/WordSim353_wup_similarity.csv', sep=',', engine='python')\n",
     "    elif (metric == 'sp_similarity'):\n",
-    "        corpus = pd.read_csv('datasets/WordSim353_sp_similarity.csv', sep=',', engine='python')\n",
+    "        if nltk:\n",
+    "            corpus = pd.read_csv('datasets/WordSim353_sp_similarity_nltk.csv', sep=',', engine='python')\n",
+    "        else:\n",
+    "            corpus = pd.read_csv('datasets/WordSim353_sp_similarity.csv', sep=',', engine='python')\n",
     "    elif (metric == 'lch_similarity'):\n",
-    "        corpus = pd.read_csv('datasets/WordSim353_lch_similarity.csv', sep=',', engine='python')\n",
+    "        if nltk:\n",
+    "            corpus = pd.read_csv('datasets/WordSim353_lch_similarity_nltk.csv', sep=',', engine='python')\n",
+    "        else:\n",
+    "            corpus = pd.read_csv('datasets/WordSim353_lch_similarity.csv', sep=',', engine='python')\n",
     "\n",
     "    actual = corpus['Human (mean)']\n",
     "    predicted = corpus[metric]\n",
@@ -68558,7 +68580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -68615,6 +68637,68 @@
     "print('\\n')\n",
     "print('Lch similarity')\n",
     "spearman_correlation('lch_similarity')\n",
+    "print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INDICE DI PEARSON (NLTK)\n",
+      "Wup similarity\n",
+      "Pearsons correlation: 0.281\n",
+      "\n",
+      "\n",
+      "Sp similarity\n",
+      "Pearsons correlation: -0.253\n",
+      "\n",
+      "\n",
+      "Lch similarity\n",
+      "Pearsons correlation: 0.227\n",
+      "\n",
+      "\n",
+      "INDICE DI SPEARMAN (NLTK)\n",
+      "Wup similarity\n",
+      "Spearmans correlation: 0.317\n",
+      "\n",
+      "\n",
+      "Sp similarity\n",
+      "Spearmans correlation: -0.310\n",
+      "\n",
+      "\n",
+      "Lch similarity\n",
+      "Spearmans correlation: 0.230\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('INDICE DI PEARSON (NLTK)')\n",
+    "print('Wup similarity')\n",
+    "pearson_correlation('wup_similarity', nltk=True)\n",
+    "print('\\n')\n",
+    "print('Sp similarity')\n",
+    "pearson_correlation('sp_similarity', nltk=True)\n",
+    "print('\\n')\n",
+    "print('Lch similarity')\n",
+    "pearson_correlation('lch_similarity', nltk=True)\n",
+    "print('\\n')\n",
+    "\n",
+    "print('INDICE DI SPEARMAN (NLTK)')\n",
+    "print('Wup similarity')\n",
+    "spearman_correlation('wup_similarity', nltk=True)\n",
+    "print('\\n')\n",
+    "print('Sp similarity')\n",
+    "spearman_correlation('sp_similarity', nltk=True)\n",
+    "print('\\n')\n",
+    "print('Lch similarity')\n",
+    "spearman_correlation('lch_similarity', nltk=True)\n",
     "print('\\n')"
    ]
   }
