[ADD] synset() method

--- a/Esercizio 1/wsd.ipynb
+++ b/Esercizio 1/wsd.ipynb
@@ -16,18 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\OliverioM\\Anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.3\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import random\n",
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -78,37 +69,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### GET_SYNSET_FROM_LABEL: restituisce il synset data la label, formattata come Lemma('token.pos.n.pos') (annotazione di semcor)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_synset_from_label(label):\n",
-    "    if (len(str(label).split(\"'\")) > 1):\n",
-    "        label = ''.join(str(label).split(\"'\")[1:-1])\n",
-    "        try:\n",
-    "            return wn.synset('.'.join(str(label).split(\".\")[:-1]))\n",
-    "        except:\n",
-    "            return None\n",
-    "    else:\n",
-    "        return None"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### LEMMA_LIST: resituisce il lemma della frase del corpus etichettato"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,8 +82,7 @@
     "    ret = []\n",
     "    try:\n",
     "        ret = [l.label() if isinstance(l, nltk.tree.Tree) else None for l in sent]\n",
-    "        ret = [get_synset_from_label(x) for x in ret if x is not None]\n",
-    "        ret = [x for x in ret if x is not None]\n",
+    "        ret = [x.synset() for x in ret]\n",
     "    except ValueError:\n",
     "        print('error')\n",
     "\n",
@@ -129,12 +94,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### GET_CONTEXT_FROM_SEMCOR: dato un senso, vengono prese tutte le frasi di semcor contententi quel senso e viene estratto il contesto"
+    "### GET_CONTEXT_FROM_SEMCOR: dato un senso, vengono estratte tutte le frasi di semcor contenenti quel senso al fine di utilizzarlo come contesto nel corpus lesk algorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -161,11 +126,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def simplified_lesk(word, sentence):\n",
+    "    word = wn.morphy(word) if wn.morphy(word) is not None else word\n",
     "    best_sense = wn.synsets(word)[0] if len(wn.synsets(word)) > 0 else None #wordnet ordina i sysnet in base alla frequenza\n",
     "    max_overlap = 0\n",
     "    context = set(sentence)\n",
@@ -190,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,10 +214,9 @@
     "\n",
     "        for j, cell in enumerate(my_sentences_with_tag[i]):\n",
     "            if random_word in cell[0]:\n",
-    "                # prendiamo la label\n",
     "                label = cell.label() if isinstance(cell, nltk.tree.Tree) else None\n",
-    "                if label:\n",
-    "                    actual_synset = get_synset_from_label(label)\n",
+    "                if label and hasattr(label, 'synset'):\n",
+    "                    actual_synset = label.synset()\n",
     "\n",
     "        predicted_synset = simplified_lesk(random_word, sentence)\n",
     "        if actual_synset is not None and predicted_synset is not None:\n",
@@ -275,21 +240,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "sequence item 0: expected str instance, SemcorSentence found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\OliverioM\\Desktop\\TLN - Radicioni\\TLN2\\Esercizio 1\\wsd.ipynb Cella 17\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m accuracies \u001b[39m=\u001b[39m []\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m10\u001b[39m):\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     accuracies\u001b[39m.\u001b[39mappend(test())\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mmean accuracy: \u001b[39m\u001b[39m'\u001b[39m, np\u001b[39m.\u001b[39mmean(accuracies))\n",
-      "\u001b[1;32mc:\\Users\\OliverioM\\Desktop\\TLN - Radicioni\\TLN2\\Esercizio 1\\wsd.ipynb Cella 17\u001b[0m in \u001b[0;36mtest\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m             actual_synset \u001b[39m=\u001b[39m get_synset_from_label(label)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m             \u001b[39m#print('cell label: ', label)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m             \u001b[39m#print('synset: ', actual_synset)\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m predicted_synset \u001b[39m=\u001b[39m corpus_lesk(random_word, sentence)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39m#print('random word: ', random_word)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m \u001b[39m#print('predicted: ', predicted_synset)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m \u001b[39m#print('actual: ', actual_synset)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=37'>38</a>\u001b[0m \u001b[39m#print(predicted_synset,'==',actual_synset)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m \u001b[39mif\u001b[39;00m actual_synset \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m predicted_synset \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m     \u001b[39m#print(\"correct: \", predicted_synset == actual_synset)\u001b[39;00m\n",
-      "\u001b[1;32mc:\\Users\\OliverioM\\Desktop\\TLN - Radicioni\\TLN2\\Esercizio 1\\wsd.ipynb Cella 17\u001b[0m in \u001b[0;36mcorpus_lesk\u001b[1;34m(word, sentence)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfor\u001b[39;00m sense \u001b[39min\u001b[39;00m wn\u001b[39m.\u001b[39msynsets(word):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     signature \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(preprocessing(sense\u001b[39m.\u001b[39mdefinition()))\u001b[39m.\u001b[39munion(\u001b[39mset\u001b[39m(preprocessing(\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(sense\u001b[39m.\u001b[39mexamples()))))\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     signature \u001b[39m=\u001b[39m signature\u001b[39m.\u001b[39munion(get_context_from_semcor(sense))\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     overlap \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(context\u001b[39m.\u001b[39mintersection(signature))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39mif\u001b[39;00m overlap \u001b[39m>\u001b[39m max_overlap:\n",
-      "\u001b[1;32mc:\\Users\\OliverioM\\Desktop\\TLN - Radicioni\\TLN2\\Esercizio 1\\wsd.ipynb Cella 17\u001b[0m in \u001b[0;36mget_context_from_semcor\u001b[1;34m(target_sense)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m     \u001b[39mif\u001b[39;00m target_sense \u001b[39min\u001b[39;00m lemma_list(sent):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m         sentences\u001b[39m.\u001b[39mappend(sent)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/OliverioM/Desktop/TLN%20-%20Radicioni/TLN2/Esercizio%201/wsd.ipynb#X30sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mset\u001b[39m(preprocessing(\u001b[39m'\u001b[39;49m\u001b[39m \u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m.\u001b[39;49mjoin(sentences)))\n",
-      "\u001b[1;31mTypeError\u001b[0m: sequence item 0: expected str instance, SemcorSentence found"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy:  0.34146341463414637\n",
+      "accuracy:  0.46511627906976744\n",
+      "accuracy:  0.3953488372093023\n",
+      "accuracy:  0.4166666666666667\n",
+      "accuracy:  0.425\n",
+      "accuracy:  0.34210526315789475\n",
+      "accuracy:  0.27906976744186046\n",
+      "accuracy:  0.36363636363636365\n",
+      "accuracy:  0.5681818181818182\n",
+      "accuracy:  0.40540540540540543\n",
+      "\n",
+      "\n",
+      "mean accuracy:  0.40019938154032253\n"
      ]
     }
    ],
@@ -301,6 +271,35 @@
     "print('\\n')\n",
     "print('mean accuracy: ', np.mean(accuracies))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Synset('group.n.01')"
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "semcor.tagged_sents(tag=\"sem\")[0][1].label().synset()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
