--- a/Esercizio 2/mapping.ipynb
+++ b/Esercizio 2/mapping.ipynb
@@ -27,7 +27,14 @@
     "    - [x] Intentionally_act\n",
     "    - [x] Competition\n",
     "    - [x] Fairness_evaluation\n",
-    "    - [x] Process_continue"
+    "    - [x] Process_continue\n",
+    "\n",
+    "- Frame loiacONO\n",
+    "    - [] Rite\n",
+    "\t- [] Ammunition\n",
+    "\t- [] Relating_concepts\n",
+    "\t- [] Temporal_collocation\n",
+    "\t- [] Compliance"
    ]
   },
   {
