Aggiunte precision e recall

--- a/Esercizio 5/summarization.ipynb
+++ b/Esercizio 5/summarization.ipynb
@@ -5,10 +5,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Automatic summarization\n",
+    "# Esercizio 5 - Automatic summarization\n",
     "\n",
-    "Risorse usate:\n",
-    "- Nasari"
+    "Si vuole ridurre un documento del 10%, 20% o 30% secondo la seguente strategia\n",
+    "\n",
+    "1. Individuare l'argomento del testo che si sta riassumendo; l'argomento può essere indicato come un (insieme di) vettori NASARI:\n",
+    "    - vt1 = {term1_score, term2_score, …, term10_score }\n",
+    "    - vt2 = {term1_score, term2_score, …, term10_score } \n",
+    "    - ...\n",
+    "\n",
+    "2. creare il contesto, raccogliendo qui i vettori dei termini (questo passaggio può essere ripetuto, scaricando ad ogni round il contributo dei termini associati)\n",
+    "\n",
+    "3. conservare i paragrafi le cui frasi contengono i termini più salienti, in base alla sovrapposizione ponderata, WO(v1,v2)\n",
+    "    - riclassificare il peso dei paragrafi applicando almeno uno degli approcci menzionati (titolo, spunto, frase, coesione)."
    ]
   },
   {
@@ -375,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,11 +410,14 @@
     "\n",
     "    # prendi solo le frasi\n",
     "    summary = [x[1] for x in weight_sentences]\n",
+    "    #add in the first postizion the title\n",
+    "    summary.insert(0, title)\n",
+    "    return summary\n",
+    "\n",
+    "def print_summary(summary):\n",
     "    summary = '\\n\\n'.join(summary)\n",
-    "    summary = title + '\\n\\n' + summary\n",
-    "    \n",
     "    print(summary)\n",
-    "    return summary"
+    "    return "
    ]
   },
   {
@@ -456,51 +468,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary = make_summarization(text, text_preprocessed, weighted_context)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Valutazione\n",
+    "\n",
+    "la valutazione può essere eseguita sulla base di due metriche complementari\n",
+    "- BLEU (bilingual evaluation understudy) per quanto riguarda la precision\n",
+    "- ROUGE (Recall-Oriented Understudy for Gisting Evaluation) per quanto riguarda la recall"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BLEU\n",
+    "\n",
+    "funzione di scoring che è stata elaborata per valutare i sistemi per la traduzione automatica\n",
+    "- costruire un sommario di riferimento, come un elenco di termini rilevanti che dovrebbero essere presenti.\n",
+    "- confrontare l'insieme di termini nel riepilogo automatico (che chiamiamo riepilogo del candidato) con quelli nel riepilogo del candidato.\n",
+    "- il punteggio BLEU è calcolato come P = m/wt che è la frazione di termini del candidato che si trovano nel riferimento, dove m è il numero di termini del candidato che sono nel riferimento, e wt è la dimensione di il candidato\n",
+    "\n",
+    "La precision in IR è solitamente definita come \n",
+    "precision = |{relevant documents} ∩ {retrieved documents}| / |{retrieved documents}|\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Andy Warhol: Why the great Pop artist thought ‘Trump is sort of cheap’\n",
-      "\n",
-      "He anticipated celebrity culture and social media, thought artists should do more than just hold a paintbrush, and wound up John Lennon. As a new Tate exhibition opens, Alastair Smart shows how far the most important artist of the modern age was ahead of his time.\n",
-      "\n",
-      "uring last year’s Super Bowl, 100 million US viewers were treated to a most unexpected sight in one of the commercial breaks. It was Andy Warhol doing nothing more than taking bites out of a Burger King Whopper – and adding the occasional bit of ketchup – for 45 seconds.\n",
-      "\n",
-      "There was no music, no punchline, just a little, light rustling of the burger’s wrapper – in a slowly unfolding scene that culminated with the hashtag #EatLikeAndy. It was about as far removed as one could imagine from the big-budget ads traditionally shown during the Super Bowl.\n",
-      "\n",
-      "Reaction on social media was swift, widespread and mostly containing the word “bizarre”. Why show a low-action clip from 1982, of an artist who died in 1987, at a sporting showcase in 2019? What financial sense did it make also – given that advertising slots at the Super Bowl are the most expensive in the world, costing $175,000 a second?\n",
-      "\n",
-      "The answer is that the footage showed a great American artist eating a great American food in the context of a great American occasion. Burger King said the advert was a celebration of the country itself.\n",
-      "\n",
-      "After a decade working as a commercial illustrator on Madison Avenue, Warhol began his artistic career at the turn of the 1960s. He sprung to fame as a leader of the Pop Art movement, which rejected high-cultural tradition and depicted everyday subject matter instead: in Warhol’s case, Coke bottles, Brillo boxes and Campbell’s Soup cans.\n",
-      "\n",
-      "Soon he was silk-screening images of Marilyn Monroe and Elvis Presley too. It suggested an artist entirely at one with America’s average Joe. The irony is, of course, that under the current president’s administration, Warhol’s parents probably wouldn’t have been allowed into the United States in the first place. Andrej and Julia Warhola hailed from a tiny village called Mikova on the edge of the Carpathian Mountains, in what today is Slovakia (but in their day was part of the Austro-Hungarian empire). In search of a better life, they moved to Pittsburgh after the First World War, where Andrej worked in construction and where Andy – Andrew Warhola – was born in 1928.\n",
-      "\n",
-      "The Tate exhibition sets out to show how large an influence Warhol has had on artists after him, especially in the way he embraced different media and means of distribution. In the mid-1960s, after the early burst of Pop works, he took to making films, such as Sleep, in which his friend, the poet John Giorno, can be seen sleeping for five hours.\n",
-      "\n",
-      "He also founded Interview, a magazine in which celebrities from Cher to Michael Jackson were interviewed – and which ran for 50 years before its demise in 2018. And let’s not forget Exploding Plastic Inevitable, a multi-sensory stage show he conceived for the Velvet Underground, a band he briefly managed.\n",
-      "\n",
-      "In short, he believed an artist could, and should, do more than just hold a paintbrush. An interdisciplinary approach to art is today taken as standard – and that’s in no small part thanks to the example set by Warhol’s adventures decades ago.\n",
-      "\n",
-      "His influence extends far beyond the art world, though. “Warhol both predates and predicts the society we live in,” says Muir. On show at Tate Modern will be 25 paintings from a little-known series of paintings from 1975 called Ladies and Gentlemen. It depicts drag queens and trans women who frequented the Gilded Grape bar, off Times Square – and, in Muir’s view, “could easily pass for having been made yesterday, in terms of the debates being had now around trans identity and LGBT rights”.\n",
-      "\n",
-      "Though dead for 33 years, Warhol anticipated the advent of social media. Take his Screen Tests, for example, 472 short films in which visitors to his studio were placed on a chair in front of a video camera and asked to “perform” solo for three minutes to camera – very much like the YouTube vloggers of today.\n",
-      "\n",
-      "Then there’s his 1975 book The Philosophy of Andy Warhol, usually described as a disjointed autobiography but better understood as a proto-Twitter account, given its author’s propensity for including both the most mundane of details (such as his love of jam on toast) and witty one-liners (such as “buying is more American than thinking”).\n",
-      "\n",
-      "He also carried a compact Minox camera with him wherever he went, taking more than 100,000 photographs of friends, food, building facades, shop signs and the like – anticipating the Instagram feeds of our image-saturated age today. “I never read,” Warhol once said. “I just look at pictures.” (In his recently published autobiography, Me, Elton John tells the hilarious story of a time he and John Lennon had been taking piles of cocaine in a New York hotel room late into the night, when Warhol knocked at the door. As Elton went to answer, Lennon implored, “Don’t let him in: he’ll have his f***ing camera.”)\n",
-      "\n",
-      "He was aware of the inexorable rise of television, particularly with the proliferation of cable channels such as CNN, ESPN, Nickelodeon and MTV in the late-1970s and early-1980s. Warhol declared at the time that television “was the medium [he’d] most now like to shine in”, and he actually presented five episodes of an MTV talk show called Andy Warhol’s Fifteen Minutes – a job cut short by his death, aged 58, from complications after a gall bladder operation. The show’s title referred to his most famous quote: “In the future, everyone will be world-famous for 15 minutes.”\n",
-      "\n",
-      "“It’s often said Warhol was the most important artist of the second half of the 20th century,” Muir says. “But one might well argue he’s the most important artist of the early 21st century too.” In a consumerist society, he realised that celebrities are every bit as ubiquitous and disposable as soup cans, Coke bottles and Burger King Whoppers.\n"
+      "Precision: 0.8235294117647058\n"
      ]
     }
    ],
    "source": [
-    "summary = make_summarization(text, text_preprocessed, weighted_context)"
+    "file_name_manual_sum = 'Andy-Warhol-manual-sum'\n",
+    "\n",
+    "_, _, manual_sum, _ = open_text(file_name_manual_sum)\n",
+    "automatic_sum = make_summarization(text, text_preprocessed, weighted_context)\n",
+    "\n",
+    "count = 0\n",
+    "for line in automatic_sum:\n",
+    "    if (line in manual_sum):\n",
+    "        count += 1\n",
+    "\n",
+    "print(f'Precision: {count/len(automatic_sum)}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RECALL\n",
+    "\n",
+    "Questa metrica stima in che misura le parole (e/o n-grammi) nei riassunti di riferimento umano sono apparse nei riassunti creati dal sistema\n",
+    "- ROUGE-N: Sovrapposizione di N-grammi tra candidato e riferimento\n",
+    "riepilogo.\n",
+    "- ROUGE-1 si riferisce alla sovrapposizione di unigramma (ogni parola) tra il sommari di sistema e di riferimento.\n",
+    "\n",
+    "La Recall in IR è abitualmente definito come recall =|{relevant documents} ∩ {retrieved documents}| / |{relevant documents}|\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision: 0.7777777777777778\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_name_manual_sum = 'Andy-Warhol-manual-sum'\n",
+    "\n",
+    "_, _, manual_sum, _ = open_text(file_name_manual_sum)\n",
+    "automatic_sum = make_summarization(text, text_preprocessed, weighted_context)\n",
+    "\n",
+    "count = 0\n",
+    "for line in automatic_sum:\n",
+    "    if (line in manual_sum):\n",
+    "        count += 1\n",
+    "\n",
+    "print(f'Recall: {count/len(manual_sum)}')"
    ]
   }
  ],
