--- a/Esercizio 5/summarization.ipynb
+++ b/Esercizio 5/summarization.ipynb
@@ -548,14 +548,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision: 0.7777777777777778\n"
+      "Recall: 0.7777777777777778\n"
      ]
     }
    ],
