--- a/Esercizio 5/summarization.ipynb
+++ b/Esercizio 5/summarization.ipynb
@@ -22,13 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import os\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import re\n",
     "import math\n",
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,12 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_babelnet_synset_by_word(word):\n",
+    "    return requests.get(f'https://babelnet.io/v8/getSynsetIds?lemma={word}&searchLang=EN&key={BABELNET_TOKEN}').json()\n",
     "'''\n",
-    "Data una frase restituisce tutti i suoi bablenet id\n",
+    "Data una frase restituisce tutti i suoi babelnet id\n",
     "'''\n",
     "def get_sentence_babelnet_ids(file_name, sentence):\n",
     "    if os.path.exists('data/ids-'+ file_name +'.json'):\n",
@@ -119,7 +120,6 @@
     "'''\n",
     "def get_babelnet_synset_by_id(syn_id):\n",
     "    df = pd.read_csv('data/local_babelnet_syns.csv')\n",
-    "    name = \"\"\n",
     "    glosses = ['']\n",
     "    examples = ['']\n",
     "\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,6 +294,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def get_nasari_vector_by_sense(sense):\n",
+    "    nasari_vectors = get_nasari_vectors()\n",
+    "    vector = None\n",
+    "    if sense in list(nasari_vectors.index.values):\n",
+    "        vector = nasari_vectors.loc[sense]\n",
+    "    return vector"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -303,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,12 +356,78 @@
    "source": [
     "## Pesatura dei paragrafi\n",
     "\n",
-    "Eseguita usanto la metrica Weighted Overlap"
+    "Eseguita usando la metrica Weighted Overlap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# weighted overlap\n",
+    "def weighted_overlap2(vect1, vect2):\n",
+    "    tot = 0.0\n",
+    "    overlap = 0\n",
+    "    for i, elem in enumerate(vect1):\n",
+    "        try:\n",
+    "            index = vect2.index(elem) + 1\n",
+    "            overlap += 1\n",
+    "        except:\n",
+    "            index = -1\n",
+    "        if index != -1:\n",
+    "            tot += (i + 1 + index) ** (-1)\n",
+    "    denominatore = 1.0\n",
+    "    for i in range(1, overlap + 1):\n",
+    "        denominatore += (2 * i) ** (-1)\n",
+    "    return tot / denominatore"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def disambiguate_word_context(weighted_context):\n",
+    "    synsets_topic = []\n",
+    "    total_weight = 0\n",
+    "    for (word_topic, weight) in weighted_context:\n",
+    "        synsets_topic.append((simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context])), weight))\n",
+    "        total_weight += weight\n",
+    "    return synsets_topic, total_weight"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def compute_score_sentence(sentence, synsets_context, total_weight):\n",
+    "    synsets_sentence = []\n",
+    "    score_sentence = 0\n",
+    "    for word in sentence:\n",
+    "        synsets_sentence.append(simplified_lesk(get_babelnet_synset_by_word(word), set([tupla[0] for tupla in synsets_context])))\n",
+    "    for syn_word in synsets_sentence:\n",
+    "        score_word = 0\n",
+    "        for (syn_topic,weight) in synsets_context:\n",
+    "            score_word += (weighted_overlap2(syn_word, syn_topic)*weight)\n",
+    "        score_word /= total_weight #media ponderata\n",
+    "        score_sentence += score_word\n",
+    "    score_sentence /= len(sentence)\n",
+    "    return score_sentence"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,11 +466,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_summarization(text, text_preprocessed, weighted_context, perc=0.8):\n",
+    "def make_summarization(text, text_preprocessed, synsets_context, total_weight, perc=0.8):\n",
     "    text_preprocessed = text_preprocessed[1:]\n",
     "\n",
     "    title = text[0]\n",
@@ -398,7 +480,7 @@
     "    i = 0\n",
     "    for line in text_preprocessed:\n",
     "        # attribuisce un peso ad ogni frase\n",
-    "        weight_sentences.append((i, text[i], weighted_overlap(line, weighted_context)))\n",
+    "        weight_sentences.append((i, text[i], compute_score_sentence(line, synsets_context, total_weight)))\n",
     "        i += 1\n",
     "\n",
     "    # ordina le frasi in base al peso\n",
@@ -430,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,16 +532,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data/dd-nasari.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_9196\\802201046.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mtitle_nasari_vectors\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mget_nasari_vectors_by_senses\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtitle_sense\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_9196\\974162011.py\u001B[0m in \u001B[0;36mget_nasari_vectors_by_senses\u001B[1;34m(senses)\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;32mdef\u001B[0m \u001B[0mget_nasari_vectors_by_senses\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0msenses\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m     \u001B[0mnasari_vectors\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mget_nasari_vectors\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m     \u001B[0mvectors\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;33m{\u001B[0m\u001B[1;33m}\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m     \u001B[1;32mfor\u001B[0m \u001B[0mword\u001B[0m \u001B[1;32min\u001B[0m \u001B[0msenses\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\AppData\\Local\\Temp\\ipykernel_9196\\961054955.py\u001B[0m in \u001B[0;36mget_nasari_vectors\u001B[1;34m()\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;32mdef\u001B[0m \u001B[0mget_nasari_vectors\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m     \u001B[0mnasari_vectors\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mpd\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mread_csv\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'data/dd-nasari.txt'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mon_bad_lines\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;34m'skip'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mheader\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;32mNone\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0msep\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;34m';'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m     \u001B[0mnasari_vectors\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mnasari_vectors\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mset_index\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m     \u001B[1;32mreturn\u001B[0m \u001B[0mnasari_vectors\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\util\\_decorators.py\u001B[0m in \u001B[0;36mwrapper\u001B[1;34m(*args, **kwargs)\u001B[0m\n\u001B[0;32m    309\u001B[0m                     \u001B[0mstacklevel\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mstacklevel\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    310\u001B[0m                 )\n\u001B[1;32m--> 311\u001B[1;33m             \u001B[1;32mreturn\u001B[0m \u001B[0mfunc\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m*\u001B[0m\u001B[0margs\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    312\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    313\u001B[0m         \u001B[1;32mreturn\u001B[0m \u001B[0mwrapper\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers\\readers.py\u001B[0m in \u001B[0;36mread_csv\u001B[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, error_bad_lines, warn_bad_lines, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001B[0m\n\u001B[0;32m    676\u001B[0m     \u001B[0mkwds\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mupdate\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mkwds_defaults\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    677\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 678\u001B[1;33m     \u001B[1;32mreturn\u001B[0m \u001B[0m_read\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mfilepath_or_buffer\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mkwds\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    679\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    680\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers\\readers.py\u001B[0m in \u001B[0;36m_read\u001B[1;34m(filepath_or_buffer, kwds)\u001B[0m\n\u001B[0;32m    573\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    574\u001B[0m     \u001B[1;31m# Create the parser.\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 575\u001B[1;33m     \u001B[0mparser\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mTextFileReader\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mfilepath_or_buffer\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m**\u001B[0m\u001B[0mkwds\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    576\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    577\u001B[0m     \u001B[1;32mif\u001B[0m \u001B[0mchunksize\u001B[0m \u001B[1;32mor\u001B[0m \u001B[0miterator\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers\\readers.py\u001B[0m in \u001B[0;36m__init__\u001B[1;34m(self, f, engine, **kwds)\u001B[0m\n\u001B[0;32m    930\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    931\u001B[0m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mhandles\u001B[0m\u001B[1;33m:\u001B[0m \u001B[0mIOHandles\u001B[0m \u001B[1;33m|\u001B[0m \u001B[1;32mNone\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;32mNone\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 932\u001B[1;33m         \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_engine\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_make_engine\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mf\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mself\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mengine\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    933\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    934\u001B[0m     \u001B[1;32mdef\u001B[0m \u001B[0mclose\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mself\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\parsers\\readers.py\u001B[0m in \u001B[0;36m_make_engine\u001B[1;34m(self, f, engine)\u001B[0m\n\u001B[0;32m   1214\u001B[0m             \u001B[1;31m# \"Union[str, PathLike[str], ReadCsvBuffer[bytes], ReadCsvBuffer[str]]\"\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   1215\u001B[0m             \u001B[1;31m# , \"str\", \"bool\", \"Any\", \"Any\", \"Any\", \"Any\", \"Any\"\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m-> 1216\u001B[1;33m             self.handles = get_handle(  # type: ignore[call-overload]\n\u001B[0m\u001B[0;32m   1217\u001B[0m                 \u001B[0mf\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   1218\u001B[0m                 \u001B[0mmode\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\io\\common.py\u001B[0m in \u001B[0;36mget_handle\u001B[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001B[0m\n\u001B[0;32m    784\u001B[0m         \u001B[1;32mif\u001B[0m \u001B[0mioargs\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mencoding\u001B[0m \u001B[1;32mand\u001B[0m \u001B[1;34m\"b\"\u001B[0m \u001B[1;32mnot\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mioargs\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmode\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    785\u001B[0m             \u001B[1;31m# Encoding\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 786\u001B[1;33m             handle = open(\n\u001B[0m\u001B[0;32m    787\u001B[0m                 \u001B[0mhandle\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    788\u001B[0m                 \u001B[0mioargs\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmode\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: 'data/dd-nasari.txt'"
+     ]
+    }
+   ],
    "source": [
     "title_nasari_vectors = get_nasari_vectors_by_senses(title_sense)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,11 +570,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "synsets_context, total_weight = disambiguate_word_context(weighted_context=weighted_context)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary = make_summarization(text, text_preprocessed, weighted_context)"
+    "summary = make_summarization(text, text_preprocessed, synsets_context, total_weight)"
    ]
   },
   {
@@ -505,17 +618,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Precision: 0.8235294117647058\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_name_manual_sum = 'Andy-Warhol-manual-sum'\n",
     "\n",
@@ -548,17 +653,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recall: 0.7777777777777778\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "file_name_manual_sum = 'Andy-Warhol-manual-sum'\n",
     "\n",
