--- a/Esercizio 5/summarization.ipynb
+++ b/Esercizio 5/summarization.ipynb
@@ -223,14 +223,16 @@
     "        signature += example + ' '\n",
     "    return set(pre_processing(signature))\n",
     "\n",
-    "def simplified_lesk(word, context):\n",
-    "    nasari_vectors = get_nasari_vectors_by_token(word)\n",
-    "    for bn_syn in bn_syns:\n",
-    "        signature = get_signature(bn_syn['id'])\n",
-    "        overlap = len(context.intersection(signature))\n",
-    "        if overlap > max_overlap:\n",
-    "            max_overlap = overlap\n",
-    "            best_sense = bn_syn['id']\n",
+    "def simplified_lesk2(word, context):\n",
+    "    best_sense = None\n",
+    "    word_signature = get_contexts_of_sentence_word_from_nasari(word=word)\n",
+    "    if word_signature is not None and len(word_signature) > 0:\n",
+    "        for bn_syn in word_contexts.keys():\n",
+    "            signature = word_contexts[bn_syn]\n",
+    "            overlap = len(context.intersection(signature))\n",
+    "            if overlap > max_overlap:\n",
+    "                max_overlap = overlap\n",
+    "                best_sense = bn_syn\n",
     "    return best_sense\n",
     "\n",
     "# Usa come contesto l'intero testo del file, non solo il titolo\n",
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 234,
    "outputs": [],
    "source": [
     "def get_nasari_vectors_by_token(word):\n",
@@ -337,17 +339,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 235,
    "outputs": [],
    "source": [
-    "def get_contexts_from_sentence_word():\n",
+    "def get_contexts_from_sentence_word(word):\n",
     "    context = {}\n",
-    "    for index, row in get_nasari_vectors_by_token('Tuple').iterrows():\n",
+    "    for index, row in get_nasari_vectors_by_token(word).iterrows():\n",
     "        key = row.name\n",
     "        row_values = row.iloc[1:].apply(lambda x: x.split('_')[0] if len(x.split('_')) > 0 else '').values\n",
     "        concatenated_row = ' '.join(row_values)\n",
-    "        context[key] = concatenated_row\n",
-    "    print(context)"
+    "        context[key] = pre_processing(concatenated_row)\n",
+    "    print(context)\n",
+    "    return context"
    ],
    "metadata": {
     "collapsed": false
@@ -355,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 233,
    "outputs": [
     {
      "name": "stdout",
@@ -432,12 +435,12 @@
       "bn:17368606n          kitty_18.94  \n",
       "\n",
       "[3568562 rows x 10 columns]\n",
-      "{'bn:00000005n': 'number integer set tuple element tuples define function permutation', 'bn:00028343n': 'tuple set tuples relation assassination film permutation -lcb- function', 'bn:00065519n': 'set tuple relation element function tuples define permutation -lcb-', 'bn:00078196n': 'set tuple relation element function tuples define permutation -lcb-', 'bn:00252664n': 'column1 enddate table historytable relational database tuple columnn column2', 'bn:00607504n': 'xtuple openmfg erp postbooks web client database functionality gui', 'bn:00993128n': 'database sql datum query model tuples relational dbms data', 'bn:01235815n': 'api node object datum javaspaces javaspace tuple space tuples', 'bn:03367405n': 'rhythm beat triplet quarter note time signature meter tempo cross-rhythm eighth note', 'bn:15410128n': 'dependency xn x1 tgd zk -lcb- y1 ym relational'}\n"
+      "{'bn:00000005n': ['number', 'integer', 'set', 'tuple', 'element', 'tuples', 'define', 'function', 'permutation'], 'bn:00028343n': ['tuple', 'set', 'tuples', 'relation', 'assassination', 'film', 'permutation', 'lcb', 'function'], 'bn:00065519n': ['set', 'tuple', 'relation', 'element', 'function', 'tuples', 'define', 'permutation', 'lcb'], 'bn:00078196n': ['set', 'tuple', 'relation', 'element', 'function', 'tuples', 'define', 'permutation', 'lcb'], 'bn:00252664n': ['column1', 'enddate', 'table', 'historytable', 'relational database', 'tuple', 'columnn', 'column2'], 'bn:00607504n': ['xtuple', 'openmfg', 'erp', 'postbooks', 'web', 'client', 'database', 'functionality', 'gui'], 'bn:00993128n': ['database', 'sql', 'datum', 'query', 'model', 'tuples', 'relational', 'dbms', 'data'], 'bn:01235815n': ['api', 'node', 'object', 'datum', 'javaspaces', 'javaspace', 'tuple', 'space', 'tuples'], 'bn:03367405n': ['rhythm', 'beat', 'triplet', 'quarter note', 'time signature', 'meter', 'tempo', 'cross', 'rhythm', 'eighth note'], 'bn:15410128n': ['dependency', 'xn', 'x1', 'tgd', 'zk', 'lcb', 'y1', 'ym', 'relational']}\n"
      ]
     }
    ],
    "source": [
-    "get_contexts_from_sentence_word()"
+    "get_contexts_from_sentence_word('Tuple')"
    ],
    "metadata": {
     "collapsed": false
